client/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starter-project-kube
spec:
  type: NodePort
  selector:
    app: starter-project-kube
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
