client/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: starter-project-kube-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: starter-project-kube
          servicePort: 80
